--- a/HobbyApp/PresentationLayer/Modules/Token/View/Token.storyboard
+++ b/HobbyApp/PresentationLayer/Modules/Token/View/Token.storyboard
@@ -18,14 +18,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mLk-aD-Ogl">
-                                <rect key="frame" x="50" y="70" width="275" height="30"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mLk-aD-Ogl" customClass="AppTextField" customModule="HobbyApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="70" width="375" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="O5k-XZ-YvS"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kus-jf-yny">
                                 <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="eI0-dF-bi9"/>
                                 </constraints>
@@ -39,10 +43,10 @@
                         <constraints>
                             <constraint firstItem="JFS-Rg-Ylx" firstAttribute="trailing" secondItem="kus-jf-yny" secondAttribute="trailing" id="4s8-w9-bnq"/>
                             <constraint firstItem="mLk-aD-Ogl" firstAttribute="top" secondItem="JFS-Rg-Ylx" secondAttribute="top" constant="50" id="JLa-NU-hhm"/>
-                            <constraint firstItem="mLk-aD-Ogl" firstAttribute="leading" secondItem="JFS-Rg-Ylx" secondAttribute="leading" constant="50" id="Mw2-KX-mmf"/>
+                            <constraint firstItem="mLk-aD-Ogl" firstAttribute="leading" secondItem="JFS-Rg-Ylx" secondAttribute="leading" id="Mw2-KX-mmf"/>
                             <constraint firstItem="JFS-Rg-Ylx" firstAttribute="bottom" secondItem="kus-jf-yny" secondAttribute="bottom" id="b6V-no-tGo"/>
                             <constraint firstItem="kus-jf-yny" firstAttribute="leading" secondItem="JFS-Rg-Ylx" secondAttribute="leading" id="hqz-Fo-VTZ"/>
-                            <constraint firstItem="JFS-Rg-Ylx" firstAttribute="trailing" secondItem="mLk-aD-Ogl" secondAttribute="trailing" constant="50" id="ymA-OE-ZQa"/>
+                            <constraint firstItem="JFS-Rg-Ylx" firstAttribute="trailing" secondItem="mLk-aD-Ogl" secondAttribute="trailing" id="ymA-OE-ZQa"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="JFS-Rg-Ylx"/>
                     </view>
